// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(SearchField)>
    <SearchField
      disableAutoSearch={false}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isBlock={false}
      isDisabled={false}
      minimumSearchTextLength={2}
      placeholder=""
      searchDelay={250}
    >
      <div
        className="search-field orion-fusion-theme"
      >
        <div
          className="input-group"
        >
          <input
            aria-disabled={false}
            aria-label="Terra.searchField.search"
            className="input"
            disabled={false}
            onChange={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            type="search"
          />
        </div>
        <Button
          className="button"
          data-terra-search-field-button="Search"
          icon={
            <IconSearch
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />
          }
          isBlock={false}
          isCompact={true}
          isDisabled={false}
          isIconOnly={true}
          onClick={[Function]}
          refCallback={[Function]}
          text="Terra.searchField.submit-search"
          type="button"
          variant="neutral"
        >
          <button
            aria-disabled={false}
            aria-label="Terra.searchField.submit-search"
            className="button neutral compact orion-fusion-theme button"
            data-terra-search-field-button="Search"
            disabled={false}
            isIconOnly={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            title="Terra.searchField.submit-search"
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span>
                Terra.searchField.submit-search
              </span>
            </span>
          </button>
        </Button>
      </div>
    </SearchField>
  </InjectIntl(SearchField)>
</ThemeContextProvider>
`;

exports[`Snapshots passes in inputRefCallback as the refCallback prop of the Input component 1`] = `
<SearchField
  disableAutoSearch={false}
  inputRefCallback={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            aria-disabled="false"
            aria-label="Terra.searchField.search"
            class="input"
            placeholder=""
            type="search"
            value=""
          />,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={false}
  isDisabled={false}
  minimumSearchTextLength={2}
  placeholder=""
  searchDelay={250}
>
  <div
    className="search-field"
  >
    <div
      className="input-group"
    >
      <input
        aria-disabled={false}
        aria-label="Terra.searchField.search"
        className="input"
        disabled={false}
        onChange={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="search"
      />
    </div>
    <Button
      className="button"
      data-terra-search-field-button="Search"
      icon={
        <IconSearch
          data-name="Layer 1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        />
      }
      isBlock={false}
      isCompact={true}
      isDisabled={false}
      isIconOnly={true}
      onClick={[Function]}
      refCallback={[Function]}
      text="Terra.searchField.submit-search"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        aria-label="Terra.searchField.submit-search"
        className="button neutral compact button"
        data-terra-search-field-button="Search"
        disabled={false}
        isIconOnly={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        title="Terra.searchField.submit-search"
        type="button"
      >
        <span
          className="button-label text-only"
        >
          <span>
            Terra.searchField.submit-search
          </span>
        </span>
      </button>
    </Button>
  </div>
</SearchField>
`;

exports[`Snapshots renders a basic search field 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      className="input"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a disabled search field with a value 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={true}
      aria-label="Terra.searchField.search"
      className="input"
      disabled={true}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={true}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field such that custom styles are applied 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      className="input test-class"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field that displays as a block to fill its container 1`] = `
<div
  className="search-field block"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      className="input"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
    <Button
      className="clear"
      data-terra-search-field-button="Clear"
      icon={
        <span
          className="clear-icon"
        />
      }
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={true}
      onClick={[Function]}
      text="Terra.searchField.clear"
      type="button"
      variant="utility"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field with a defaulted value 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      className="input"
      defaultValue="Default"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
    <Button
      className="clear"
      data-terra-search-field-button="Clear"
      icon={
        <span
          className="clear-icon"
        />
      }
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={true}
      onClick={[Function]}
      text="Terra.searchField.clear"
      type="button"
      variant="utility"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field with a placeholder 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      className="input"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder="Test"
      type="search"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field with a value 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      className="input"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
      value="Test"
    />
    <Button
      className="clear"
      data-terra-search-field-button="Clear"
      icon={
        <span
          className="clear-icon"
        />
      }
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={true}
      onClick={[Function]}
      text="Terra.searchField.clear"
      type="button"
      variant="utility"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field with an aria-label 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Search Field"
      className="input"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`Snapshots renders a search field with an aria-label using prop 1`] = `
<div
  className="search-field"
>
  <div
    className="input-group"
  >
    <input
      aria-disabled={false}
      aria-label="Terra.searchField.search"
      ariaLabel="Search Field"
      className="input"
      disabled={false}
      onChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="search"
    />
  </div>
  <Button
    className="button"
    data-terra-search-field-button="Search"
    icon={
      <IconSearch
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    isBlock={false}
    isCompact={true}
    isDisabled={false}
    isIconOnly={true}
    onClick={[Function]}
    refCallback={[Function]}
    text="Terra.searchField.submit-search"
    type="button"
    variant="neutral"
  />
</div>
`;
